Fixed positioning issues by using "nowrap" and "<br>"

--- a/core/app/assets/stylesheets/facts/wheel.css.less
+++ b/core/app/assets/stylesheets/facts/wheel.css.less
@@ -10,6 +10,11 @@
 
   .wheel {
     position: relative; // for tooltips
+
+    .fact-wheel-tooltip {
+      white-space: nowrap;
+      text-align: center;
+    }
   }
 
   input {
